--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,2 +1,16 @@
+^cran-comments\.md$
+^CRAN-RELEASE$
+.travis.yml
 ^.*\.Rproj$
 ^\.Rproj\.user$
+^logo\.png$
+^docs$
+^_pkgdown\.yml$
+Makefile
+cran_check.R
+^revdep$
+^doc$
+^Meta$
+^pkgdown$
+vignettes/*_cache
+^.github$
