--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,9 @@ Imports:
     stats,
     demography,
     forecast,
+    zoo,
+    ggpubr,
+    moments,
     Rdpack
 License: GPL-3 + file LICENSE
 Encoding: UTF-8
