--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,11 @@
 
 export(Lexis)
 export(Lifetable)
+export(descriptive_plot)
 export(growth_exp)
+export(growth_linear)
+export(growth_logistic)
+export(karup_king)
 importFrom(Rdpack,reprompt)
 importFrom(demography,extract.years)
 importFrom(demography,lca)
@@ -13,20 +17,31 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_all)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(forecast,forecast)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,dup_axis)
 importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_line)
 importFrom(ggplot2,element_text)
+importFrom(ggplot2,geom_area)
+importFrom(ggplot2,geom_density)
 importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,geom_text)
+importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,margin)
+importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_classic)
+importFrom(ggpubr,ggarrange)
+importFrom(ggpubr,ggtexttable)
+importFrom(ggpubr,ttheme)
 importFrom(lubridate,date_decimal)
 importFrom(lubridate,days)
 importFrom(lubridate,decimal_date)
@@ -35,5 +50,10 @@ importFrom(lubridate,year)
 importFrom(lubridate,years)
 importFrom(lubridate,ymd)
 importFrom(magrittr,"%>%")
+importFrom(moments,kurtosis)
+importFrom(moments,skewness)
 importFrom(stats,complete.cases)
+importFrom(stats,density)
+importFrom(stats,quantile)
+importFrom(stats,sd)
 importFrom(tidyr,gather)
