descriptive_plot function updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ importFrom(ggplot2,theme_classic)
 importFrom(ggpubr,ggarrange)
 importFrom(ggpubr,ggtexttable)
 importFrom(ggpubr,ttheme)
+importFrom(grid,unit)
 importFrom(lubridate,date_decimal)
 importFrom(lubridate,days)
 importFrom(lubridate,decimal_date)
