--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,12 +22,14 @@ Imports:
     ggpubr,
     moments,
     grid,
+    stackoverflow,
+    utils,
     Rdpack
 License: GPL-3 + file LICENSE
 Encoding: UTF-8
 RdMacros: Rdpack
 LazyData: true
 URL: http://www.cesargamboasanabria.com
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
 Suggests: 
     testthat
