--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,12 +7,19 @@ export(Lifetable)
 export(Moultrie)
 export(Myers)
 export(Sprague)
+export(anonymous)
+export(correlate_df)
 export(descriptive_plot)
 export(growth_exp)
 export(growth_linear)
 export(growth_logistic)
 export(karup_king)
+importFrom(DescTools,Lambda)
+importFrom(Hmisc,"%nin%")
 importFrom(Rdpack,reprompt)
+importFrom(correlation,correlation)
+importFrom(corrplot,corrplot)
+importFrom(corrr,network_plot)
 importFrom(demography,extract.years)
 importFrom(demography,lca)
 importFrom(demography,lifetable)
@@ -23,16 +30,20 @@ importFrom(dplyr,contains)
 importFrom(dplyr,desc)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
+importFrom(dplyr,last)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
+importFrom(dplyr,mutate_at)
 importFrom(dplyr,mutate_if)
+importFrom(dplyr,n)
 importFrom(dplyr,rename)
 importFrom(dplyr,right_join)
 importFrom(dplyr,row_number)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
+importFrom(dplyr,vars)
 importFrom(forecast,forecast)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,dup_axis)
@@ -66,14 +77,17 @@ importFrom(lubridate,ymd)
 importFrom(magrittr,"%>%")
 importFrom(moments,kurtosis)
 importFrom(moments,skewness)
+importFrom(rcompanion,wilcoxonRG)
 importFrom(stackoverflow,match.call.defaults)
 importFrom(stats,coef)
 importFrom(stats,complete.cases)
+importFrom(stats,cor.test)
 importFrom(stats,density)
 importFrom(stats,lm)
 importFrom(stats,na.omit)
 importFrom(stats,quantile)
 importFrom(stats,sd)
+importFrom(stats,xtabs)
 importFrom(tidyr,gather)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,separate)
