op.arima function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(growth_exp)
 export(growth_linear)
 export(growth_logistic)
 export(karup_king)
+export(op.arima)
 importFrom(DescTools,Lambda)
 importFrom(Hmisc,"%nin%")
 importFrom(Rdpack,reprompt)
@@ -28,6 +29,7 @@ importFrom(demography,set.upperage)
 importFrom(dplyr,arrange)
 importFrom(dplyr,contains)
 importFrom(dplyr,desc)
+importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,last)
@@ -44,6 +46,8 @@ importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
+importFrom(forecast,Arima)
+importFrom(forecast,accuracy)
 importFrom(forecast,forecast)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,dup_axis)
@@ -77,6 +81,11 @@ importFrom(lubridate,ymd)
 importFrom(magrittr,"%>%")
 importFrom(moments,kurtosis)
 importFrom(moments,skewness)
+importFrom(parallel,clusterExport)
+importFrom(parallel,clusterMap)
+importFrom(parallel,detectCores)
+importFrom(parallel,makeCluster)
+importFrom(parallel,stopCluster)
 importFrom(rcompanion,wilcoxonRG)
 importFrom(stackoverflow,match.call.defaults)
 importFrom(stats,coef)
@@ -91,4 +100,6 @@ importFrom(stats,xtabs)
 importFrom(tidyr,gather)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,separate)
+importFrom(tidyr,spread)
+importFrom(utils,capture.output)
 importFrom(utils,combn)
