Add lambda argument

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,6 +81,7 @@ importFrom(lubridate,ymd)
 importFrom(magrittr,"%>%")
 importFrom(moments,kurtosis)
 importFrom(moments,skewness)
+importFrom(parallel,clusterEvalQ)
 importFrom(parallel,clusterExport)
 importFrom(parallel,clusterMap)
 importFrom(parallel,detectCores)
