adding project_structure function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(growth_linear)
 export(growth_logistic)
 export(karup_king)
 export(op.arima)
+export(project_structure)
 importFrom(DescTools,Lambda)
 importFrom(Hmisc,"%nin%")
 importFrom(Rdpack,reprompt)
