read_from_dir function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(growth_logistic)
 export(karup_king)
 export(op.arima)
 export(project_structure)
+export(read_from_dir)
 importFrom(DescTools,Lambda)
 importFrom(Hmisc,"%nin%")
 importFrom(Rdpack,reprompt)
@@ -72,6 +73,7 @@ importFrom(ggpubr,ggarrange)
 importFrom(ggpubr,ggtexttable)
 importFrom(ggpubr,ttheme)
 importFrom(grid,unit)
+importFrom(here,here)
 importFrom(lubridate,date_decimal)
 importFrom(lubridate,days)
 importFrom(lubridate,decimal_date)
