required_packages function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(karup_king)
 export(op.arima)
 export(project_structure)
 export(read_from_dir)
+export(required_packages)
 importFrom(DescTools,Lambda)
 importFrom(Hmisc,"%nin%")
 importFrom(Rdpack,reprompt)
