--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(Lifetable)
 export(Moultrie)
 export(Myers)
 export(Sprague)
+export(TFR_projection)
 export(anonymous)
 export(correlate_df)
 export(descriptive_plot)
@@ -14,7 +15,10 @@ export(growth_exp)
 export(growth_linear)
 export(growth_logistic)
 export(karup_king)
+export(mortality_projection)
+export(netmigration_projection)
 export(op.arima)
+export(population_projection)
 export(project_structure)
 export(read_from_dir)
 export(required_packages)
