--- a/NAMESPACE
+++ b/NAMESPACE
@@ -106,6 +106,7 @@ importFrom(stats,na.omit)
 importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(stats,xtabs)
+importFrom(stringr,str_to_title)
 importFrom(tidyr,gather)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,separate)
