updating to CRAN

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,11 +28,16 @@ importFrom(Rdpack,reprompt)
 importFrom(correlation,correlation)
 importFrom(corrplot,corrplot)
 importFrom(corrr,network_plot)
+importFrom(demography,coherentfdm)
 importFrom(demography,extract.years)
+importFrom(demography,fdm)
 importFrom(demography,lca)
 importFrom(demography,lifetable)
+importFrom(demography,netmigration)
+importFrom(demography,pop.sim)
 importFrom(demography,read.demogdata)
 importFrom(demography,set.upperage)
+importFrom(demography,smooth.demogdata)
 importFrom(dplyr,arrange)
 importFrom(dplyr,contains)
 importFrom(dplyr,desc)
@@ -54,7 +59,12 @@ importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
 importFrom(forecast,Arima)
+importFrom(forecast,BoxCox)
+importFrom(forecast,InvBoxCox)
 importFrom(forecast,accuracy)
+importFrom(forecast,arfima)
+importFrom(forecast,auto.arima)
+importFrom(forecast,ets)
 importFrom(forecast,forecast)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,dup_axis)
@@ -95,16 +105,26 @@ importFrom(parallel,clusterMap)
 importFrom(parallel,detectCores)
 importFrom(parallel,makeCluster)
 importFrom(parallel,stopCluster)
+importFrom(rainbow,fts)
 importFrom(rcompanion,wilcoxonRG)
+importFrom(scales,rescale)
 importFrom(stackoverflow,match.call.defaults)
+importFrom(stats,StructTS)
 importFrom(stats,coef)
 importFrom(stats,complete.cases)
 importFrom(stats,cor.test)
 importFrom(stats,density)
 importFrom(stats,lm)
 importFrom(stats,na.omit)
+importFrom(stats,nlm)
+importFrom(stats,predict)
+importFrom(stats,qnorm)
 importFrom(stats,quantile)
 importFrom(stats,sd)
+importFrom(stats,ts)
+importFrom(stats,tsp)
+importFrom(stats,var)
+importFrom(stats,weighted.mean)
 importFrom(stats,xtabs)
 importFrom(stringr,str_to_title)
 importFrom(tidyr,gather)
@@ -113,3 +133,5 @@ importFrom(tidyr,separate)
 importFrom(tidyr,spread)
 importFrom(utils,capture.output)
 importFrom(utils,combn)
+importFrom(utils,install.packages)
+importFrom(utils,installed.packages)
