--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,6 +34,8 @@ Imports:
     parallel,
     here,
     stringr,
+    scales,
+    rainbow,
     Rdpack
 License: GPL-3 + file LICENSE
 Encoding: UTF-8
