--- a/NAMESPACE
+++ b/NAMESPACE
@@ -109,6 +109,7 @@ importFrom(rainbow,fts)
 importFrom(rcompanion,wilcoxonRG)
 importFrom(scales,rescale)
 importFrom(stackoverflow,match.call.defaults)
+importFrom(stats,"tsp<-")
 importFrom(stats,StructTS)
 importFrom(stats,coef)
 importFrom(stats,complete.cases)
