--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,16 @@
 Package: popstudy
 Type: Package
-Title: popstudy Package
+Title: Applied Techniques to Demographic and Time Series Analysis
 Version: 1.0.0
 Depends:
     R (>= 3.5.0)
 Authors@R: c(
     person("Cesar", "Gamboa-Sanabria", email="info@cesargamboasanabria.com", role=c( "aut", "mdc", "cph", "cre"), comment=c(ORCID = "0000-0001-6733-4759"))
     )
-Maintainer: Cesar Gamboa Sanabria <info@cesargamboasanabria.com>
-Description: Applied techniques to demographic analysis.
+Maintainer: Cesar Gamboa-Sanabria <info@cesargamboasanabria.com>
+Description: The use of overparameterization is proposed with combinatorial analysis to test a broader spectrum of possible ARIMA models.
+    In the selection of ARIMA models, the most traditional methods such as correlograms or others, do not usually cover many alternatives to define the number of coefficients to be estimated in the model, which represents an estimation method that is not the best.
+    The popstudy package contains several tools for statistical analysis in demography and time series based in Shryock research (Shryock et. al. (1980) <https://books.google.co.cr/books?id=8Oo6AQAAMAAJ>).
 Imports:
     ggplot2,
     magrittr,
@@ -32,17 +34,17 @@ Imports:
     corrplot,
     correlation,
     parallel,
-    snow,
     here,
     stringr,
     scales,
     rainbow,
     Rdpack
-License: GPL-3 + file LICENSE
+License: GPL-3
 Encoding: UTF-8
 RdMacros: Rdpack
 LazyData: true
-URL: http://www.cesargamboasanabria.com
+URL: https://www.cesargamboasanabria.com
 RoxygenNote: 7.2.0
 Suggests: 
-    testthat
+    testthat,
+    snow
